Updated link to chipseq 2016 - test
see subject

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ To find the relevant material please follow links below</p>
 <li><a href="http://mrccsc.github.io/Reproducible-R/">R Session 1 and session 2.</a></li>
 <li><a href="http://mrccsc.github.io/Bioconductor/">Bioconductor.</a></li>
 <li><a href="http://mrccsc.github.io/RNAseq_short/">RNA-seq.</a></li>
-<li><a href="http://mrccsc.github.io/ChIPseq_short/">ChIP-seq.</a></li>
+<li><a href="http://mrccsc.github.io/ChIPseq_short/2016/">ChIP-seq.</a></li>
 </ul>
 
       <footer class="site-footer">
